[gd_scene load_steps=2 format=3 uid="uid://bvnahnjly1a8j"]

[ext_resource type="Script" path="res://scripts/ui/tools_ui.gd" id="1_fnp1u"]

[node name="Tools_UI" type="PanelContainer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -40.5
offset_top = -31.0
offset_right = 40.5
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 8
script = ExtResource("1_fnp1u")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ToolAxe" type="Button" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Axe"

[node name="ToolPick" type="Button" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Pick"

[connection signal="pressed" from="MarginContainer/HBoxContainer/ToolAxe" to="." method="_on_tool_axe_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/ToolPick" to="." method="_on_tool_pick_pressed"]
